# prime_numbers

./: .gitignore  app.py  pyproject.toml  requirements.txt  server.py  trains.json  trains_stations.sqlite3
primes/: primes.py
static/: main.css
templates/: base.html  index.html  nav.html  primes.html
train_stations/: models.py  schemas.py  trains.py
